<resources>
    <string name="app_name">Corner Shop</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="help_center">Help Center</string>
    <string name="title_activity_order_history">OrderHistory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ocr">OCR</string>
    <string name="health_hygiene"><![CDATA[HEALTH & HYGIENE]]></string>
    <string name="food_snacks"><![CDATA[FOOD & SNACKS]]></string>
    <string name="PackagePending">pending_pack</string>
</resources>