<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="?actionBarSize"
        android:paddingTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="Categories"
        android:textColor="@color/black"
        android:textSize="35dp" />
    <ScrollView
        android:layout_below="@id/title"
        android:id="@+id/categoryBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardDrugs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
        <TextView
            android:id="@+id/DrugsCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Drugs"
            android:padding="20dp"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            />

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardStationary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardDrugs"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
        <TextView
            android:id="@+id/StationaryCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stationary"
            android:padding="20dp"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardGroceries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardStationary"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
            <TextView
                android:id="@+id/GroceriesCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Groceries"
                android:padding="20dp"
                android:textSize="25dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardElectronics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardGroceries"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
            <TextView
                android:id="@+id/ElectronicsCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_below="@id/GroceriesCat"
                android:text="Electronics"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardClothes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardElectronics"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >

            <TextView
                android:id="@+id/ClothesCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Clothes"
                android:padding="20dp"
                android:layout_below="@id/ElectronicsCat"
                android:textSize="25dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCosmetics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardClothes"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
            <TextView
                android:id="@+id/CosmeticsCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ClothesCat"
                android:text="Cosmetics"
                android:textSize="25dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardCosmetics"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >

            <TextView
                android:id="@+id/HEALTHandHYGIENECat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_hygiene"
                android:layout_below="@id/CosmeticsCat"
                android:textSize="25dp"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBevarage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardHealth"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >

            <TextView
                android:id="@+id/BevarageCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/HEALTHandHYGIENECat"
                android:text="Bevarage"
                android:textSize="25dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardBevarage"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >
            <TextView
                android:id="@+id/FOODandSNACKS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_snacks"
                android:layout_below="@id/BevarageCat"
                android:textSize="25dp"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@id/cardFood"
                app:cardBackgroundColor="#D5E1FF"
                app:cardElevation="30dp"
                >

            <TextView
                android:id="@+id/otherssCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/FOODandSNACKS"
                android:text="Others"
                android:padding="20dp"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>



    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:elevation="16dp">

        <ImageView
            android:id="@+id/notiClick"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_notification_icon"
            android:layout_marginRight="100dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/ocrClick"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/ocr"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"/>
        <ImageView
            android:id="@+id/cartClick"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:src="@drawable/ic_cart_icon"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>




</RelativeLayout>